@@ -1,5 +1,10 @@
 2008-01-06  Tobias Burnus  <burnus@net-b.de>
 
+	PR fortran/34654
+	* gfortran.dg/internal_io_unf.f90: New.
+
+2008-01-06  Tobias Burnus  <burnus@net-b.de>
+
 	PR fortran/34660
 	* gfortran.dg/elemental_args_check_2.f90: New.
 
