@@ -1,5 +1,11 @@
 2008-01-06  Tobias Burnus  <burnus@net-b.de>
 
+	PR fortran/34654
+	* io.c (check_io_constraints): Disallow unformatted I/O for
+	internal units.
+
+2008-01-06  Tobias Burnus  <burnus@net-b.de>
+
 	PR fortran/34660
 	* resolve.c (resolve_formal_arglist): Reject dummy procedure in
 	ELEMENTAL functions.
